worked on SelectUserComponent/ Activity and on api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="bluetooth_search_title">Searching SmartMirror.</string>
     <string name="bluetooth_search">Please activate Bluetooth and pair this phone with your
     SmartMirror.</string>
+    <string name="bluetooth_not_supported">This device does not support Bluetooth.</string>
+
     <string name="menu_change_bt_name">Change Query Name</string>
     <string name="change_bt_name_title">Change visible Bluetooth name of SmartMirror </string>
     <string name="change_bt_name_edit">SmartMirror</string>
